crates/monosecret/src/snapshots/monosecret__audit__tests__bulk_event_records_keys_and_command.snap
---
source: crates/monosecret/src/audit.rs
expression: event
---
{
  "action": "run",
  "actor": {
    "is_agent": false,
    "user": "tester"
  },
  "command": "./deploy.sh",
  "id": "[event-id]",
  "keys": [
    "DATABASE_URL",
    "API_KEY"
  ],
  "outcome": "found",
  "profile": "production",
  "project": "demo",
  "seq": 0,
  "session_id": "test-session",
  "ts": "[timestamp]",
  "v": 1,
  "version": "[version]"
}
