crates/monosecret/src/snapshots/monosecret__audit__tests__from_config_absolute_path_builds_and_writes.snap
---
source: crates/monosecret/src/audit.rs
expression: event
---
{
  "action": "get",
  "actor": {
    "agent": "[actor-agent]",
    "is_agent": "[actor-is-agent]",
    "user": "[actor-user]"
  },
  "id": "[event-id]",
  "key": "K",
  "outcome": "found",
  "profile": "default",
  "project": "demo",
  "seq": 0,
  "session_id": "[session-id]",
  "ts": "[timestamp]",
  "v": 1,
  "version": "0.0.0"
}
