crates/monosecret/src/snapshots/monosecret__audit__tests__jsonlsink_writes_oversized_line_intact.snap
---
source: crates/monosecret/src/audit.rs
expression: contents
---
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
