crates/monosecret/src/snapshots/monosecret__audit__tests__records_metadata_but_never_the_value.snap
---
source: crates/monosecret/src/audit.rs
expression: event
---
{
  "action": "get",
  "actor": {
    "is_agent": false,
    "user": "tester"
  },
  "id": "[event-id]",
  "key": "DATABASE_URL",
  "outcome": "found",
  "profile": "production",
  "project": "demo",
  "provider": "vault://user@host/kv",
  "reason": "deploy web frontend",
  "seq": 0,
  "session_id": "test-session",
  "ts": "[timestamp]",
  "v": 1,
  "version": "[version]"
}
